--- a/iCargoUIAutomation.csproj
+++ b/iCargoUIAutomation.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <SpecFlowObsoleteCodeBehindFiles Remove="Features\LTE001_ACC_00001_Create a PP AWB in LTE001 for a known shipper - Copy.feature.cs" />
+    <SpecFlowObsoleteCodeBehindFiles Remove="Features\LTE001_ACC_00002_Create an AWB in LTE001 for an unknown shipper on a restricted pax flight - Copy.feature.cs" />
     <SpecFlowObsoleteCodeBehindFiles Remove="Features\LTE001_ACC_00003_Create a DG AWB in LTE001 - Copy.feature.cs" />
     <SpecFlowObsoleteCodeBehindFiles Remove="Features\LTE001_ACC_00006_Accept a prebooked AWB in LTE001 - Copy.feature.cs" />
     <SpecFlowObsoleteCodeBehindFiles Remove="Features\LTE001_ACC_00007_Create an AWB in LTE001 that has pieces that fail screening - Copy.feature.cs" />
@@ -46,6 +47,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <SpecFlowFeatureFiles Update="Features\OPR344_EXP_00001_Manifest an AWB for an Unknown Shipper on a pax flight.feature">
+      <Visible>$(UsingMicrosoftNETSdk)</Visible>
+      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
+    </SpecFlowFeatureFiles>
     <SpecFlowFeatureFiles Update="Features\LTE001_ACC_00011_Create an AWB for a known shipper that has first flight on freighter and next flight on pax.feature">
       <Visible>$(UsingMicrosoftNETSdk)</Visible>
       <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
@@ -85,6 +90,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Features\OPR344_EXP_00001_Manifest an AWB for an Unknown Shipper on a pax flight.feature.cs">
+      <DependentUpon>OPR344_EXP_00001_Manifest an AWB for an Unknown Shipper on a pax flight.feature</DependentUpon>
+    </Compile>
     <Compile Update="Features\LTE001_ACC_00013_Create an AWB with less than a 2 hr connection time between flights.feature.cs">
       <Visible>true</Visible>
       <DependentUpon>LTE001_ACC_00013_Create an AWB with less than a 2 hr connection time between flights.feature</DependentUpon>
