--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '8.0' 
+          dotnet-version: '6.0' 
           dotnet-install-dir: /path/to/install/dir
           dotnet-install-arguments: '--channel LTS --install-dir /path/to/install/dir --no-path'
           
@@ -34,5 +34,5 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: Run tests by tag
-        run: dotnet test --filter TestCategory=CAP018
+        run: dotnet test --filter TestCategory=LTE001
         
