Added App.config file for user id and password. Also made changes in the report and log path.

--- a/iCargoUIAutomation.csproj
+++ b/iCargoUIAutomation.csproj
@@ -133,4 +133,8 @@
     </Compile>
   </ItemGroup>
 
+	<Target Name="CopyCustomContent" AfterTargets="AfterBuild">
+		<Copy SourceFiles="App.config" DestinationFiles="$(OutDir)\testhost.dll.config" />
+	</Target>
+
 </Project>
