Removed Email Configuration, added Excel Configuration to the the awbs generated. Also implemented Key Vaults to store user ids and password.

--- a/App.config
+++ b/App.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="CCC_Username" value="iCargoTest3@aagqa.net"/>
-		<add key="CCC_Password" value="*TV%My14ytgT96$"/>
-		<add key="CGODG_Username" value="iCargoTest2@aagqa.net"/>
-		<add key="CGODG_Password" value="@45Qhnfx6P1A$L#"/>
+		<add key="Key_Vault_Uri" value="https://cargoshared-test-kv.vault.azure.net/"/>
+		<add key="CCC_Secret_Username" value="CCCUsername"/>
+		<add key="CCC_Secret_Password" value="CCCPassword"/>
+		<add key="CGODG_Secret_Username" value="CGODGUsername"/>
+		<add key="CGODG_Secret_Password" value="CGODGPassword"/>				
 	</appSettings>
 </configuration>
