--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
  
     env:
       BROWSER: chrome
-      ROLE_GROUP: admin
+      ROLE_GROUP: CCC
  
     steps:
       - name: Checkout code
@@ -41,4 +41,4 @@ jobs:
           echo "RoleGroup=${ROLE_GROUP}" >> $GITHUB_ENV
  
       - name: Run tests by tag
-        run: dotnet test --filter TestCategory=LTE001
+        run: dotnet test --filter TestCategory=CAP018_BKG_00001
