Some changes in secrets and log path and gitignore

--- a/App.config
+++ b/App.config
@@ -2,6 +2,9 @@
 <configuration>
 	<appSettings>
 		<add key="Key_Vault_Uri" value="https://cargoshared-test-kv.vault.azure.net/"/>
+		<add key="Client_Secret" value="SecretName"/>
+		<add key="Client_Id" value="c2dd4de9-0471-4f60-83e9-0d9a12f2de32"/>
+		<add key="Tenant_Id" value="0f44c5d4-42b0-45c2-bf55-d0fea8430d33"/>
 		<add key="CCC_Secret_Username" value="CCCUsername"/>
 		<add key="CCC_Secret_Password" value="CCCPassword"/>
 		<add key="CGODG_Secret_Username" value="CGODGUsername"/>
