Excel and report locations changed to Azure cloud storage.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,6 @@
   "CCCSecretUsername": "CCCUsername",
   "CCCSecretPassword": "CCCPassword",
   "CGODGSecretUsername": "CGODGUsername",
-  "CGODGSecretPassword": "CGODGPassword"
+  "CGODGSecretPassword": "CGODGPassword",
+  "AzureStorageConnectionString": "BlobStorageConnectionString"
 }
