--- a/iCargoUIAutomation.csproj
+++ b/iCargoUIAutomation.csproj
@@ -41,6 +41,7 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.Identity" Version="1.12.0" />
 		<PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.21.1" />
 		<PackageReference Include="CG.Commons" Version="1.1.0" />
 		<PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
 		<PackageReference Include="EPPlus" Version="7.2.1" />
