--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,10 @@ on:
     tags:
       - HelloTestingDoesnoTMatter
     branches:
-      - develop
+      - Cap018_Changes
   pull_request:
     branches:
-      - develop
+      - Cap018_Changes
  
 jobs:
   build:
