--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
  
     env:
       BROWSER: chrome
-      ROLE_GROUP: CNS
+      ROLE_GROUP: CCC
  
     steps:
       - name: Checkout code
