--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,44 @@
-name: main
- 
-on:
-  push:
-    tags:
-      - HelloTestingDoesnoTMatter
-    branches:
-      - Cap018_Changes
-  pull_request:
-    branches:
-      - Cap018_Changes
- 
-jobs:
-  build:
-    runs-on: windows-2019
- 
-    env:
-      BROWSER: chrome
-      ROLE_GROUP: CCC
- 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
- 
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '6.0'
-          dotnet-install-dir: /path/to/install/dir
-          dotnet-install-arguments: '--channel LTS --install-dir /path/to/install/dir --no-path'
- 
-      - name: Restore dependencies
-        run: dotnet restore
- 
-      - name: Build
-        run: dotnet build --configuration Release
- 
-      - name: Set environment variables for script
-        run: |
-          echo "Browser=${BROWSER}" >> $GITHUB_ENV
-          echo "RoleGroup=${ROLE_GROUP}" >> $GITHUB_ENV
- 
-      - name: Run tests by tag
+# name: main
 
-        #run: dotnet test --filter TestCategory=LTE001_ACC_00007
+# on:
+#   push:
+#     tags:
+#       - HelloTestingDoesnoTMatter
+#     branches:
+#       - Cap018_Changes
+#   pull_request:
+#     branches:
+#       - Cap018_Changes
+
+# jobs:
+#   build:
+#     runs-on: windows-2019
+
+#     env:
+#       BROWSER: chrome
+#       ROLE_GROUP: CCC
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Setup .NET Core
+#         uses: actions/setup-dotnet@v1
+#         with:
+#           dotnet-version: '6.0'
+#           dotnet-install-dir: /path/to/install/dir
+#           dotnet-install-arguments: '--channel LTS --install-dir /path/to/install/dir --no-path'
+
+#       - name: Restore dependencies
+#         run: dotnet restore
+
+#       - name: Build
+#         run: dotnet build --configuration Release
+
+#       - name: Set environment variables for script
+#         run: |
+#           echo "Browser=${BROWSER}" >> $GITHUB_ENV
+#           echo "RoleGroup=${ROLE_GROUP}" >> $GITHUB_ENV
+
+#       - name: Run tests by tag
+#         run: dotnet test --filter TestCategory=LTE001_ACC_00007
