--- a/utilities/pipeline.yml
+++ b/utilities/pipeline.yml
@@ -1,99 +1,142 @@
-trigger:
-  branches:
-    include:
-      - main
-      - develop
+# Variable 'BROWSER' was defined in the Variables tab
+# Variable 'ROLE_GROUP' was defined in the Variables tab
+name: $(date:yyyyMMdd)$(rev:.r)
+resources:
+  repositories:
+  - repository: self
+    type: git
+    ref: refs/heads/Test_Execution
+jobs:
+- job: Job_1
+  displayName: Build and Copy Artifacts
+  cancelTimeoutInMinutes: 1
+  pool:
+    name: QE-Win10-iCargo
+  steps:
+  - checkout: self
+    clean: true
+    fetchTags: false
+  - task: NuGetToolInstaller@0
+    displayName: Use NuGet 6.0
+    inputs:
+      versionSpec: 6.0
+  - task: NuGetCommand@2
+    displayName: NuGet restore
+    inputs:
+      solution: '**\*.sln'
+  - task: VSBuild@1
+    displayName: Build solution
+    inputs:
+      platform: $(BuildPlatform)
+      configuration: $(BuildConfiguration)
+      clean: true
+  - task: CopyFiles@2
+    displayName: 'Copy Files to: Staging Directory'
+    inputs:
+      SourceFolder: $(Build.SourcesDirectory)
+      TargetFolder: ' $(Build.ArtifactStagingDirectory)'
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact: iCargoUIAutomation'
+    inputs:
+      ArtifactName: iCargoUIAutomation
+- job: Job_2
+  displayName: Execution job
+  timeoutInMinutes: 240
+  dependsOn: Job_1
+  pool:
+    name: QE-Win10-iCargo
+  steps:
+  - checkout: self
+    clean: true
+    fetchTags: false
+  - task: PowerShell@2
+    displayName: PowerShell Script
+    inputs:
+      targetType: inline
+      script: >2
 
-pr:
-  branches:
-    include:
-      - main
-      - develop
+        echo "Connecting to IGQW10ICGQE01"
 
-variables:
-  solution: '**/*.sln' # Path to the solution file or project file
-  buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
-  testResults: 'TestResults'
+        $Server="IGQW10ICGQE01"
 
-stages:
-  - stage: Build
-    displayName: 'Build Automation Project'
-    jobs:
-      - job: Build
-        displayName: 'Build Solution'
-        pool:
-          vmImage: 'windows-latest'
-        steps:
-          - task: UseDotNet@2
-            inputs:
-              packageType: sdk
-              version: '6.x'
-            displayName: 'Install .NET Core SDK'
+        $User="Airgroup\iusr_qasvc"
 
-          - task: NuGetToolInstaller@1
-            displayName: 'Install NuGet'
+        $Password="Q@svcUS3R!"
 
-          - task: NuGetCommand@2
-            inputs:
-              command: restore
-              restoreSolution: '$(solution)'
-            displayName: 'Restore NuGet Packages'
+        cmdkey /generic:TERMSRV/$Server /user:$User /pass:$Password
 
-          - task: VSBuild@1
-            inputs:
-              solution: '$(solution)'
-              platform: '$(buildPlatform)'
-              configuration: '$(buildConfiguration)'
-            displayName: 'Build Solution'
+        mstsc /v:$Server
 
-  - stage: Test
-    displayName: 'Run Automation Tests'
-    dependsOn: Build
-    jobs:
-      - job: RunTests
-        displayName: 'Run Tests and Publish Results'
-        pool:
-          vmImage: 'windows-latest'
-        steps:
-          - task: UseDotNet@2
-            inputs:
-              packageType: sdk
-              version: '6.x'
-            displayName: 'Install .NET Core SDK'
 
-          - script: |
-              dotnet test --logger trx --results-directory $(testResults) --filter Category=SmokeTests
-            displayName: 'Run Tests'
+        echo "Connecting to IGQW10ICGQE02"
 
-          - task: PublishTestResults@2
-            inputs:
-              testResultsFiles: '$(testResults)/*.trx'
-              testResultsFormat: VSTest
-            displayName: 'Publish Test Results'
+        $Server="IGQW10ICGQE02"
 
-          - task: PublishBuildArtifacts@1
-            inputs:
-              PathtoPublish: '$(testResults)'
-              ArtifactName: 'AutomationTestReports'
-            displayName: 'Publish Test Reports'
+        $User="Airgroup\iusr_qasvc"
 
-  - stage: Deploy
-    displayName: 'Deploy to Environment'
-    dependsOn: Test
-    jobs:
-      - job: Deploy
-        displayName: 'Deploy Artifacts'
-        pool:
-          vmImage: 'windows-latest'
-        steps:
-          - task: DownloadBuildArtifacts@0
-            inputs:
-              buildType: current
-              downloadType: single
-              artifactName: 'AutomationTestReports'
-            displayName: 'Download Build Artifacts'
+        $Password="Q@svcUS3R!"
 
-          - script: |
-              echo "Deploying test reports to Azure Blob Storage or other targets."
-            displayName: 'Deploy Automation Reports'
+        cmdkey /generic:TERMSRV/$Server /user:$User /pass:$Password
+
+        mstsc /v:$Server
+
+
+        echo "Connecting to IGQW10ICGQE03"
+
+        $Server="IGQW10ICGQE03"
+
+        $User="Airgroup\iusr_qasvc"
+
+        $Password="Q@svcUS3R!"
+
+        cmdkey /generic:TERMSRV/$Server /user:$User /pass:$Password
+
+        mstsc /v:$Server
+
+
+        echo "Connecting to IGQW10ICGQE04"
+
+        $Server="IGQW10ICGQE04"
+
+        $User="Airgroup\iusr_qasvc"
+
+        $Password="Q@svcUS3R!"
+
+        cmdkey /generic:TERMSRV/$Server /user:$User /pass:$Password
+
+        mstsc /v:$Server
+
+
+        echo "Connecting to IGQW10ICGQE05"
+
+        $Server="IGQW10ICGQE05"
+
+        $User="Airgroup\iusr_qasvc"
+
+        $Password="Q@svcUS3R!"
+
+        cmdkey /generic:TERMSRV/$Server /user:$User /pass:$Password
+
+        mstsc /v:$Server
+  - task: DownloadBuildArtifacts@1
+    displayName: Download Build Artifacts
+    inputs:
+      artifactName: iCargoUIAutomation
+      extractTars: false
+  - task: VSTest@3
+    displayName: VsTest - testAssemblies
+    inputs:
+      testAssemblyVer2: >-
+        **\iCargoUIAutomation.dll
+         **\$(buildConfiguration)\*[Tt]est.dll
+        **\$(buildConfiguration)\*test*.dll
+
+        !**\*Microsoft.VisualStudio.TestPlatform*
+
+        !**\obj\**
+      searchFolder: $(System.ArtifactsDirectory)
+      testFiltercriteria: TestCategory=CAP018_BKG_00007
+      testRunTitle: iCargo.QA_$(Date:yyyyMMdd)
+      rerunFailedTests: true
+      rerunFailedThreshold: 91
+...
