--- a/utilities/pipeline.yml
+++ b/utilities/pipeline.yml
@@ -29,7 +29,7 @@ jobs:
     inputs:
       solution: '**\*.sln'
       platform: 'Any CPU'
-      configuration: $(BuildConfiguration)
+      configuration: 'Release'
       clean: true
   - task: CopyFiles@2
     displayName: 'Copy Files to: Staging Directory'
