--- a/utilities/pipeline.yml
+++ b/utilities/pipeline.yml
@@ -1,6 +1,9 @@
 # Variable 'BROWSER' was defined in the Variables tab
 # Variable 'ROLE_GROUP' was defined in the Variables tab
 name: $(date:yyyyMMdd)$(rev:.r)
+variables:
+  BROWSER: ${{ variables.BROWSER }}
+  ROLE_GROUP: ${{ variables.ROLE_GROUP }}
 resources:
   repositories:
   - repository: self
