Update pipeline.yml for Azure Pipelines

--- a/utilities/pipeline.yml
+++ b/utilities/pipeline.yml
@@ -3,7 +3,7 @@
 name: $(date:yyyyMMdd)$(rev:.r)
 variables:
   BROWSER: ${{ variables.BROWSER }}
-  ROLE_GROUP: ${{ variables.ROLE_GROUP }}
+  env:ROLE_GROUP: ${{ variables.ROLE_GROUP }}
 resources:
   repositories:
   - repository: self
