--- a/utilities/pipeline.yml
+++ b/utilities/pipeline.yml
@@ -1,48 +1,50 @@
-# Variable 'BROWSER' was defined in the Variables tab
-# Variable 'ROLE_GROUP' was defined in the Variables tab
-name: $(date:yyyyMMdd)$(rev:.r)
+name: $(Build.DefinitionName)_$(Date:yyyyMMdd)$(Rev:.r)
+
 variables:
-  BROWSER: ${{ variables.BROWSER }}  
+  BROWSER: ${{ variables.BROWSER }}
+  ROLE_GROUP: ${{ variables.ROLE_GROUP }}
+
 resources:
   repositories:
   - repository: self
     type: git
     ref: refs/heads/iCargoUIExternalExcel_16Dec
+
 jobs:
 - job: Job_1
   displayName: Build and Copy Artifacts
-  cancelTimeoutInMinutes: 1
   pool:
     name: QE-Win10-iCargo
   steps:
   - checkout: self
     clean: true
-    fetchTags: false
   - task: NuGetToolInstaller@0
-    displayName: Use NuGet 6.0
+    displayName: Install NuGet 6.0
     inputs:
       versionSpec: 6.0
   - task: NuGetCommand@2
-    displayName: NuGet restore
+    displayName: Restore NuGet Packages
     inputs:
-      solution: '**\*.sln'
+      restoreSolution: '**/*.sln'
   - task: VSBuild@1
-    displayName: Build solution
-    inputs:      
+    displayName: Build Solution
+    inputs:
+      solution: '**/*.sln'
       platform: 'Any CPU'
       configuration: 'Release'
       clean: true
   - task: CopyFiles@2
-    displayName: 'Copy Files to: Staging Directory'
+    displayName: Copy Files to Staging Directory
     inputs:
       SourceFolder: $(Build.SourcesDirectory)
-      TargetFolder: ' $(Build.ArtifactStagingDirectory)'
+      TargetFolder: $(Build.ArtifactStagingDirectory)
   - task: PublishBuildArtifacts@1
-    displayName: 'Publish Artifact: iCargoUIAutomation'
+    displayName: Publish Build Artifacts
     inputs:
       ArtifactName: iCargoUIAutomation
+
 - job: Job_2
-  displayName: Execution job
+  displayName: Test Execution
   timeoutInMinutes: 240
   dependsOn: Job_1
   pool:
@@ -50,99 +52,39 @@ jobs:
   steps:
   - checkout: self
     clean: true
-    fetchTags: false
   - task: PowerShell@2
-    displayName: PowerShell Script
+    displayName: Execute PowerShell Script for Role Connections
     env:
-      ROLE_GROUP : ${ROLEGROUP}
+      ROLE_GROUP: ${{ variables.ROLE_GROUP }}
     inputs:
       targetType: inline
-      script: >2
+      script: |
         echo "Starting Role Group Connection Script"
         echo "Role Group: $env:ROLE_GROUP"
 
-        echo "Connecting to IGQW10ICGQE01"
-
-        $Server="IGQW10ICGQE01"
-
-        $User="Airgroup\iusr_qasvc"
-
-        $Password="Q@svcUS3R!"
-
-        cmdkey /generic:TERMSRV/$Server /user:$User /pass:$Password
-
-        mstsc /v:$Server
-
-
-        echo "Connecting to IGQW10ICGQE02"
-
-        $Server="IGQW10ICGQE02"
-
-        $User="Airgroup\iusr_qasvc"
-
-        $Password="Q@svcUS3R!"
-
-        cmdkey /generic:TERMSRV/$Server /user:$User /pass:$Password
-
-        mstsc /v:$Server
-
-
-        echo "Connecting to IGQW10ICGQE03"
-
-        $Server="IGQW10ICGQE03"
-
-        $User="Airgroup\iusr_qasvc"
-
-        $Password="Q@svcUS3R!"
-
-        cmdkey /generic:TERMSRV/$Server /user:$User /pass:$Password
-
-        mstsc /v:$Server
-
-
-        echo "Connecting to IGQW10ICGQE04"
-
-        $Server="IGQW10ICGQE04"
-
-        $User="Airgroup\iusr_qasvc"
-
-        $Password="Q@svcUS3R!"
-
-        cmdkey /generic:TERMSRV/$Server /user:$User /pass:$Password
-
-        mstsc /v:$Server
-
-
-        echo "Connecting to IGQW10ICGQE05"
-
-        $Server="IGQW10ICGQE05"
-
-        $User="Airgroup\iusr_qasvc"
-
-        $Password="Q@svcUS3R!"
-
-        cmdkey /generic:TERMSRV/$Server /user:$User /pass:$Password
-
-        mstsc /v:$Server
+        $servers = @("IGQW10ICGQE01", "IGQW10ICGQE02", "IGQW10ICGQE03", "IGQW10ICGQE04", "IGQW10ICGQE05")
+        foreach ($server in $servers) {
+          echo "Connecting to $server"
+          cmdkey /generic:TERMSRV/$server /user:$(UserName) /pass:$(Password)
+          mstsc /v:$server
+        }
   - task: DownloadBuildArtifacts@1
     displayName: Download Build Artifacts
     inputs:
       artifactName: iCargoUIAutomation
-      extractTars: false
-  - task: VSTest@3
-    displayName: VsTest - testAssemblies
+      downloadPath: $(System.ArtifactsDirectory)
+  - task: VSTest@2
+    displayName: Execute Tests
     inputs:
-      testAssemblyVer2: >-
+      testSelector: 'testAssemblies'
+      testAssemblyVer2: |
         **\iCargoUIAutomation.dll
-         **\$(buildConfiguration)\*[Tt]est.dll
-        **\$(buildConfiguration)\*test*.dll
-
+        **\$(BuildConfiguration)\*[Tt]est.dll
+        **\$(BuildConfiguration)\*test*.dll
         !**\*Microsoft.VisualStudio.TestPlatform*
-
         !**\obj\**
       searchFolder: $(System.ArtifactsDirectory)
       testFiltercriteria: TestCategory=CAP018_BKG_00001
       testRunTitle: iCargo.QA_$(Date:yyyyMMdd)
       rerunFailedTests: true
       rerunFailedThreshold: 91
-...
