--- a/iCargoUIAutomation.csproj
+++ b/iCargoUIAutomation.csproj
@@ -10,6 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="TestData\CAP018_MaintainBooking_TestData.xlsx" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="TestData\CAP018_MaintainBooking_TestData.xlsx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Allure.Xunit" Version="2.12.1" />
     <PackageReference Include="Azure.Core" Version="1.44.1" />
     <PackageReference Include="Azure.Identity" Version="1.13.2" />
